# rosa-python-client

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  tox.ini
cli/: main.py
rosa/: cli.py
rosa/tests/: conftest.py  const.py  test_parse_command.py
