[tool.poetry]
name = "rosa-python-client"
version = "1.0.22"
description = "Wrapper for rosa cli"
authors = ["Meni Yakove <myakove@gmail.com>"]
readme = "README.md"
packages = [{include = "rosa"}]

[tool.poetry.dependencies]
python = "^3.8"
redhat-qe-cloud-tools = "^1.0.6"
python-benedict = "^0.32.0"
python-simple-logger = "^1.0.5"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
