[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', "py311"]
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"

[tool.poetry]
name = "rosa-python-client"
version = "0.0.0"
description = "Wrapper for rosa cli"
authors = ["Meni Yakove <myakove@gmail.com>"]
readme = "README.md"
packages = [{include = "rosa"}]
license = "Apache-2.0"
homepage = "https://github.com/RedHatQE/rosa-python-client"
documentation = "https://github.com/RedHatQE/rosa-python-client/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
redhat-qe-cloud-tools = "^1.0.6"
python-benedict = "^0.32.0"
python-simple-logger = "^1.0.5"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.urls]
Download = "https://pypi.org/project/rosa-python-client/"
"Bug Tracker" = "https://github.com/RedHatQE/rosa-python-client/issues"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
